kube-config/tempfiles-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempfiles-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf-backpod
  template:
    metadata:
      name: tempfiles-backend-pod
      labels:
        app: tf-backpod
    spec:
      containers:
        - name: tempfiles-backend-container
          image: minpeter/tempfiles-backend
          ports:
            - containerPort: 5000
              name: tf-backend-port
