kube-config/tempfiles-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempfiles-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10m"
    kubernetes.io/ingress.class: "tempfiles-nginx"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-tempfiles-prod"
spec:
  rules:
    - host: api.tempfiles.ml
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempfiles-backend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - api.tempfiles.ml
        - tempfiles.ml
      secretName: tempfiles-tls-cert
