kube-config/tempfiles-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10m"
    kubernetes.io/ingress.class: "minpeter-nginx"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - tfb.minpeter.cf
      secretName: test-tls-cert

  rules:
    - host: tfb.minpeter.cf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempfiles-backend-svc
                port:
                  number: 80
